--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <footer>
             <div class="stats-section">
                 <div class="stat-box">
-                    <img src="/images/hospital.png" alt="Clinics" />
+                    <img src="./images/hospital.png" alt="Clinics" />
                     <p class="number">600+</p>
                     <p class="label">Clinics</p>
                 </div>
