--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
+    <title>Web-Dev-Intern-Assesment
+</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/0d390d4325.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Figtree' rel='stylesheet'>
@@ -89,7 +90,7 @@
                     <p class="label">Clinics</p>
                 </div>
                 <div class="stat-box box4">
-                    <img src="/images/doctor.png" alt="Doctors" />
+                    <img src="images/doctor.png" alt="Doctors" />
                     <p class="number">1300+</p>
                     <p class="label">Doctors</p>
                 </div>
