--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
                     <p class="label">Doctors</p>
                 </div>
                 <div class="stat-box box3">
-                    <img src="/images/tooth.png" alt="Root Canals" />
+                    <img src="./images/tooth.png" alt="Root Canals" />
                     <p class="number">35K+</p>
                     <p class="label">Root Canals</p>
                 </div>
                 <div class="stat-box box1">
-                    <img src="/images/crowd.png" alt="Patients" />
+                    <img src="./images/crowd.png" alt="Patients" />
                     <p class="number">30L+</p>
                     <p class="label">Happy Patients</p>
                 </div>
 
                 <div class="stat-box box2">
-                    <img src="/images/dental-drill.png" alt="Implants" />
+                    <img src="./images/dental-drill.png" alt="Implants" />
                     <p class="number">55K+</p>
                     <p class="label">Implants</p>
                 </div>
@@ -123,7 +123,7 @@
             <div class="boxali">
 
                 <div class="s1-card">
-                    <img src="/images/framex.png" class="frm1">
+                    <img src="./images/framex.png" class="frm1">
                     <div class="s1-card-content">
                         <img src="/images/framex.png" class="frm2">
                         <h2>Root Canal Treatment</h2>
@@ -145,9 +145,9 @@
                 </div>
 
                 <div class="s1-card">
-                    <img src="/images/c7ec34a055b9420c62059e1b314c42dee347395a.png" class="frm1">
+                    <img src="./images/c7ec34a055b9420c62059e1b314c42dee347395a.png" class="frm1">
                     <div class="s1-card-content">
-                        <img src="/images/c7ec34a055b9420c62059e1b314c42dee347395a.png" class="frm2">
+                        <img src="./images/c7ec34a055b9420c62059e1b314c42dee347395a.png" class="frm2">
                         <h2>Re Root Canal Treatment</h2>
                         <p>Ideal issues that persist or recur after an initial root canal treatment</p>
                         <h3>Types of RCT</h3>
@@ -181,7 +181,7 @@
 
                 <div class="comparison-card">
                     <div class="images">
-                        <img src="/images/25ce48926ee056139066bee677f64a3e60694207.png" alt="Before and After" />
+                        <img src="./images/25ce48926ee056139066bee677f64a3e60694207.png" alt="Before and After" />
                     </div>
                     <div class="info">
                         <span class="name">Arjun Mehta</span>
@@ -191,7 +191,7 @@
 
                 <div class="comparison-card">
                     <div class="images">
-                        <img src="/images/61563b969b270e098d464d1b6e6102ebfbe69aef.png" alt="Before and After" />
+                        <img src="./images/61563b969b270e098d464d1b6e6102ebfbe69aef.png" alt="Before and After" />
                     </div>
                     <div class="info">
                         <span class="name">Neha Joshi</span>
@@ -201,7 +201,7 @@
 
                 <div class="comparison-card">
                     <div class="images">
-                        <img src="/images/466d5a80433cacbc70fe8c812da4b19cf38385a1.png" alt="Before and After" />
+                        <img src="./images/466d5a80433cacbc70fe8c812da4b19cf38385a1.png" alt="Before and After" />
                     </div>
                     <div class="info">
                         <span class="name">Viram Desai</span>
@@ -212,7 +212,7 @@
 
                 <div class="comparison-card">
                     <div class="images">
-                        <img src="/images/d1f94cae6dd0506a78c886dc3775f69f52a849cb.png" alt="Before and After"
+                        <img src="./images/d1f94cae6dd0506a78c886dc3775f69f52a849cb.png" alt="Before and After"
                             class="imgn" />
                     </div>
                     <div class="info">
@@ -282,7 +282,7 @@
 
                 <div class="comparison-card-1">
                     <div class="imagen">
-                        <img class="imagen1" src="/images/7941ff63401f23bec926d1451525d4a561db75ef.png"
+                        <img class="imagen1" src="./images/7941ff63401f23bec926d1451525d4a561db75ef.png"
                             alt="Before and After" />
                     </div>
                     <div class="info">
@@ -298,7 +298,7 @@
 
                 <div class="comparison-card-1">
                     <div class="imagen">
-                        <img class="imagen1" src="/images/7683262e53168c5abacb2dd6e9628306e5e87572.png"
+                        <img class="imagen1" src="./images/7683262e53168c5abacb2dd6e9628306e5e87572.png"
                             alt="Before and After" />
                     </div>
                     <div class="info">
@@ -314,24 +314,7 @@
 
                 <div class="comparison-card-1">
                     <div class="imagen">
-                        <img class="imagen1" src="/images/4ab14ef802ff813e8159cbc51c93b005f67d9185.png"
-                            alt="Before and After" />
-                    </div>
-                    <div class="info">
-                        <div style="text-align: left;">
-
-                            <span class="name">Shubman</span> <br>
-                            <span class="name">Indore </span>
-                        </div>
-
-                        <span class="location">Aligniers</span>
-                    </div>
-                </div>
-
-
-                <div class="comparison-card-1">
-                    <div class="imagen">
-                        <img class="imagen1" src="/images/1c4f36762b247b46ab3a1ab62a3508f25d0b49f2.png"
+                        <img class="imagen1" src="./images/4ab14ef802ff813e8159cbc51c93b005f67d9185.png"
                             alt="Before and After" />
                     </div>
                     <div class="info">
@@ -348,7 +331,24 @@
 
                 <div class="comparison-card-1">
                     <div class="imagen">
-                        <img class="imagen1" src="/images/132311bcedeb7fe4613090c305c9df00a6074bc7.png"
+                        <img class="imagen1" src="./images/1c4f36762b247b46ab3a1ab62a3508f25d0b49f2.png"
+                            alt="Before and After" />
+                    </div>
+                    <div class="info">
+                        <div style="text-align: left;">
+
+                            <span class="name">Shubman</span> <br>
+                            <span class="name">Indore </span>
+                        </div>
+
+                        <span class="location">Aligniers</span>
+                    </div>
+                </div>
+
+
+                <div class="comparison-card-1">
+                    <div class="imagen">
+                        <img class="imagen1" src="./images/132311bcedeb7fe4613090c305c9df00a6074bc7.png"
                             alt="Before and After" />
                     </div>
                     <div class="info">
