--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="s1-card">
                     <img src="./images/framex.png" class="frm1">
                     <div class="s1-card-content">
-                        <img src="/images/framex.png" class="frm2">
+                        <img src="./images/framex.png" class="frm2">
                         <h2>Root Canal Treatment</h2>
                         <p>Ideal for infected or damaged tooth</p>
                         <h3>Types of RCT</h3>
