--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="mid-section">
             <div class="mid-1">
                 <div class="mid-content midsmall">
-
+                     <h1 class="h-n h-m">Your Smile, Our Priority At <br><span style="color:orange;">Clove Dental</span></h1>
                     <h1 style="color:#303030;">Painless Root Canal Treatment in Delhi</h1>
                     <p style="color:#4E4E4E;"> Expert RCT. Zero Pain. Right Here in Delhi.</p>
                     <button class="btn book-btn">
